deploy/k8s/production/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bugbarn-web
spec:
  selector:
    app.kubernetes.io/name: bugbarn-web
    app.kubernetes.io/environment: production
  ports:
    - name: http
      port: 8080
      targetPort: http
